--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First git project</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
     <h1>Hello World!</h1>
+
+    <script scr="script/main.js"></script>
 </body>
 </html>
