--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First git project</title>
+    <link rel="stylesheet" href="style/zero.css">
     <link rel="stylesheet" href="style/main.css">
 </head>
-<body>
-    <h1>Hello World!</h1>
-
-    <script scr="script/main.js"></script>
+<body id="body">
+    <div class="change">
+        <button class="change__btn">change</button>
+    </div>
 </body>
+<script src="script/main.js"></script>
 </html>
